Fixed articles on mobile

--- a/src/css/card.css
+++ b/src/css/card.css
@@ -188,12 +188,11 @@
     }
 
     .card {
-        height: 30vh;
-        font-size: 18px;
+        font-size: 16px;
+        width: 18vh;
     }
 
     .small-card {
-        height: 25vh !important;
         margin: 8px !important;
     }
 }
